--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <main>
-    <h1>Hola Mundo</h1>
+    <h1>Jhon Gonzalez Gs.</h1>
+    <h2>ADSO 2996731</h2>
+    <p>Comit creado desde VSCode</p>
   </main>
 </body>
 
