--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,10 @@
 
 <body>
   <main>
-    <h1>Jhon Gonzalez Gs.</h1>
+    <h1>Jhon Camilo Gonzalez Gs.</h1>
     <h2>ADSO 2996731</h2>
     <p>Comit creado desde VSCode</p>
+    <p>Hola Mundo</p>
   </main>
 </body>
 
